Fix scrollbark track remove

--- a/src/index.scss
+++ b/src/index.scss
@@ -238,10 +238,6 @@ figure{
       background-color: var(--color-down);
       border-radius: 1rem;
     }
-    &::-webkit-scrollbar-track{
-      background-color: var(--primary-brand-background-base);
-      border-radius: 1rem;
-    }
   }
 }
 
